Overflow fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+overflow-x: hidden;
+
 .section-std {
     margin-bottom: 30px;
 }
